--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "loader": "^2.1.1",
+    "redux-zero": ">=5.1.7",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.0-beta.0",
     "webpack": "^4.42.1",
