--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-cli": ">=3.1.1",
     "webpack-dev-server": ">=3.11.0",
     "preact": ">=10.4.5",
-    "preact-compat": "^3.19.0"
+    "preact-compat": "^3.19.0",
+    "preact-router": "^3.2.1"
   }
 }
