--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "core-js": "^3.6.5",
+    "regenerator-runtime": "^0.13.7",
     "babel-preset-preact": ">=1.0.0",
     "@babel/plugin-transform-react-jsx": "^7.10.4",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.5.2",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "cssnano": "^4.1.10",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "loader": "^2.1.1",
@@ -26,6 +32,13 @@
     "webpack-dev-server": ">=3.11.0",
     "preact": ">=10.4.5",
     "preact-compat": "^3.19.0",
-    "preact-router": "^3.2.1"
-  }
+    "preact-router": "^3.2.1",
+    "whatwg-fetch": "^3.0.0"
+  },
+  "browserslist": [
+    "> 0.25%, not dead",
+    "ios >= 8",
+    "last 10 version",
+    "ie >= 10"
+  ]
 }
