Css variables were added

--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
-    "core-js": "^3.6.5",
-    "regenerator-runtime": "^0.13.7",
     "babel-preset-preact": ">=1.0.0",
     "@babel/plugin-transform-react-jsx": "^7.10.4",
+    "core-js": "^3.6.5",
+    "regenerator-runtime": "^0.13.7",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.5.2",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "cssnano": "^4.1.10",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "loader": "^2.1.1",
-    "redux-zero": ">=5.1.7",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.0-beta.0",
     "webpack": "^4.42.1",
@@ -33,6 +34,7 @@
     "preact": ">=10.4.5",
     "preact-compat": "^3.19.0",
     "preact-router": "^3.2.1",
+    "redux-zero": ">=5.1.7",
     "whatwg-fetch": "^3.0.0"
   },
   "browserslist": [
