--- a/.gitignore
+++ b/.gitignore
@@ -1,77 +1,7 @@
-# Prerequisites
-*.d
-
 # dependencies
 **/node_modules/
 # build
 **/public/
-
-# Compiled Object files
-*.o
-*.slo
-*.ko
-*.lo
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
 
 # Local
 local*
@@ -82,6 +12,7 @@ CMakeCache.txt
 cmake_install.cmake
 Makefile
 .DS_Store
+package-lock.json
 venv
 *.log
 *-debug
