--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.0-beta.0",
     "webpack": "^4.42.1",
+    "copy-webpack-plugin": "^6.0.3",
     "webpack-cli": ">=3.1.1",
     "webpack-dev-server": ">=3.11.0",
     "preact": ">=10.4.5",
