--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "Practice-module",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/js/index.js",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server .",
     "watch": "webpack --watch",
     "build": "webpack"
   },
